--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "latest",
     "@mui/joy": "latest",
-    "@mui/material": "npm:@mui/joy@latest",
+    "@mui/material": "latest",
     "react": "latest",
     "react-dom": "latest"
   },
@@ -22,8 +22,5 @@
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": "3.0.0",
     "vite": "latest"
-  },
-  "resolutions": {
-    "@mui/material": "npm:@mui/joy@latest"
   }
 }
